--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ div.card{
     margin-left: auto;
     margin-right: auto;
 
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-top: 10%;
+
+    padding-left: 40px;
+    padding-right: 40px;
 
     border-radius: 12px;
 }
@@ -76,12 +78,12 @@ div.description h3{
 .links ul li button{
     background-color: hsl(0, 0%, 20%);
     color: white;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 15px;
-    width: 300px;
+    width: 350px;
     border-style: none;
-    height: 40px;
-    border-radius: 5px;
+    height: 50px;
+    border-radius: 10px;
 }
 
 .links ul li button:hover{
